SERVER-127001 Correctly handle maxTimeMS for db.runCommand explain (#56307)

GitOrigin-RevId: 3575a6ddf13951c258dc9e3585ed44717fc8173f