src/mongo/db/commands/query_cmd/explain_cmd.cpp
@@ -118,6 +118,13 @@ public:
                                                           request().getSerializationContext());
             _innerRequest = std::move(explainedCommand.innerRequest);
             _innerInvocation = std::move(explainedCommand.innerInvocation);
+
+            // Fold a maxTimeMS nested inside the explained command into this command's own
+            // maxTimeMS so the standard deadline machinery enforces it like a top-level maxTimeMS.
+            auto& explainArgs = request().getGenericArguments();
+            explainArgs.setMaxTimeMS(explain_cmd_helpers::resolveMaxTimeMS(
+                explainArgs.getMaxTimeMS(),
+                _innerInvocation->getGenericArguments().getMaxTimeMS()));
         }
 
         NamespaceString ns() const override {
